# NcatBot5

./: .gitignore  .pre-commit-config.yaml  Dockerfile  License.txt  MANIFEST.in  README.md  dto_tool.py  entrypoint.sh  functest.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: auto-release.yml  pre_build.yml  python-publish.yml  tag_update.yml
cat/: README.md  ci.py  cil.py  config.py  constants.py  hatch_hooks.py  io.py  precommit.py  processing.py
dev-docs/: commits.md  readme.md  readme2.md  tips
scripts/: README.md  generate_release_notes.py  install_precommit.sh  run_precommit_all.sh
src/: __init__.py  __main__.py  meta.py
src/abc/: api_base.py  builder.py  nodes.py  note.md  protocol_abc.py
src/adapters/: __init__.py
src/adapters/napcat/: __init__.py  api.py  api_base.py  builder.py  group.py  message.py  protocol.py  system.py  user.py
src/adapters/napcat/api/: __init__.py  api.py  api_base.py  group.py  message.py  system.py  user.py
src/adapters/napcat/nodes/: __init__.py  dto.py  node.py  node_base.py
src/adapters/napcat/nodes/dto/: __init__.py  dto.py  dto_base.py
src/connector/: ReadMe.md  __init__.py  abc.py  wsclient.py
src/core/: IM.py  client.py  nodes.py  plugin.py  rabc.py  ws_client.py
src/core/plugin_func/: __init__.py  command.py  config.py  listener.py
src/core/plugin_mixin/: __init__.py  config.py  configer.py  timer.py
src/exceptions/: __init__.py  parse.py
src/plugins_system/: README.md  __init__.py  app.py  exceptions.py  logger.py  meta.py
src/plugins_system/abc/: events.py  plugins.py
src/plugins_system/core/: events.py  lazy_resolver.py  mixin.py  plugins.py
src/plugins_system/implementations/: event_bus.py  plugin_finder.py  plugin_loader.py
src/plugins_system/managers/: config_manager.py  plugin_manager.py
src/plugins_system/mixins/: server.py
src/plugins_system/utils/: constants.py  helpers.py  types.py
src/sys_plugin/: demo.py
src/utils/: color.py  constants.py  decorators.py  dto_tool.py  dto_tool.pyi  file_dog.py  helper.py  io.py  logformat.py  logger.py  typec.py
tests/: test_ci_and_precommit_wrappers.py  test_ci_precommit_guard.py  test_hatch_hooks.py  test_precommit_autofix.py  test_precommit_config.py  test_rabc.py  test_requirements_sync.py
