[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ncatbot5"
# version 读取 src/meta.py
dynamic = ["version"]
description = "一个基于通信协议的 Python Bot SDK"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "MIT"
keywords = ["ncatbot", "ncatbot5"]
authors = [{ name = "Fish-LP", email = "Fish.zh@outlook.com" }]
maintainers = [{ name = "Fish-LP", email = "Fish.zh@outlook.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# 运行时依赖
dependencies = [
    "packaging>=21.3",
    "aiofiles>=23.1.0",
    "PyYAML>=6.0",
    "watchdog>=2.2.0",
    "aiohttp>=3.13.2",
]

[project.optional-dependencies] # 可选依赖
build = ["build", "twine"]
lint = ["ruff", "black", "isort"]
test = ["pytest"]
dev = ["pre-commit", "lint", "test"]
ai-helper = ["gitingest"]

[project.urls]
"Homepage" = "https://ncatbot.xyz/"
"Repository" = "https://github.com/ncatbot/NcatBot5"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic.version]
attr = "meta.__version__"

[project.scripts]
ncatbot = "src.__main__:main"

# # Hatch build hooks
# [tool.hatch.build.targets.wheel.hooks]
# pre-build = ["cat.hatch_hooks:pre_build"]
